<resources>
    <string name="app_name">SzefApp</string>
    <string name="clock_image">image of a clock</string>
    <string name="add_new_task">add new task</string>
    <string name="strike_string" translatable="false"><strike>%1$s</strike></string>
    <string name="pick_days_to_reload">Pick number of days to reload task</string>
    <string name="reward_icon">reward icon</string>
    <string name="create_new_task">Create new task</string>
    <string name="repeat">repeat</string>
    <string name="task_name_label">task name</string>
    <string name="date_format" translatable="false">%1$d/%2$d/%3$d</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
</resources>
